# sector7-infrastructure

./: .gitignore  CLAUDE.md  README.md
apps/appflowy/: 00-namespace.yaml  01-secrets.yaml  02-postgres.yaml  03-redis.yaml  04-minio.yaml  05-gotrue.yaml  06-appflowy-cloud.yaml  07-appflowy-worker.yaml  08-appflowy-web.yaml  09-admin-frontend.yaml  10-ingress.yaml  README.md
apps/aurora-forester/: .commitlintrc.json  COMMITS.md  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/aurora-forester/agents/: jack-valltrades.md  otto.md
apps/aurora-forester/context-library/: graydon-who-am-i.md  letter-to-self.md  love-dedication.md  otters-and-dynamite.md
apps/aurora-forester/docs/: architecture.md
apps/aurora-forester/k8s/: aurora-bot.yaml  namespace.yaml  postgres.yaml  secrets.yaml
apps/aurora-forester/persona/: aurora-forester.md  persona-profile.md
apps/aurora-forester/scripts/: deploy.sh  test-local.sh
apps/aurora-forester/src/: __init__.py
apps/aurora-forester/src/agents/: __init__.py  spawner.py
apps/aurora-forester/src/bot/: __init__.py  discord_bot.py
apps/aurora-forester/src/channels/: message_handler.py
apps/aurora-forester/src/core/: __init__.py  aurora.py  aurora_graph.py  config.py  founder_profile.py  llm.py  security.py
apps/aurora-forester/src/db/: connection.py
apps/aurora-forester/src/integrations/: huggingface.py
apps/aurora-forester/src/learning/: __init__.py  context.py  patterns.py
apps/aurora-forester/src/think_tank/: __init__.py
apps/aurora-forester/src/utils/: __init__.py
apps/n8n/: deployment.yaml  ingress.yaml  service.yaml
apps/nextcloud/: deployment.yaml  ingress.yaml  service.yaml
apps/nocodb/: deployment.yaml  ingress.yaml  service.yaml
apps/ollama/: deployment.yaml  ingress.yaml
docs/: APPFLOWY-TEAM-SETUP.md  CURRENT-STATE.md  INFRASTRUCTURE-AUDIT.md  NETWORK-TOPOLOGY.md  OPNSENSE-CONFIGURATION.md  QUICK-REFERENCE.md  REBUILD-GAMEPLAN-2025-11-25.md  SECTOR7-COMPLETE-AUDIT-2025-11-25.md  SECURITY-GUIDE.md  WORKING-SERVICES-SNAPSHOT.md  setup-guide.md
scripts/: backup.sh  deploy-all-apps.sh  quick-start.sh
secrets/: .gitignore  README.md  appflowy.env.example  nocodb.env.example  supabase.env.example
(+38 files in other folders)
